# StarV

./: .gitignore  2024_Demo_TinyNet.py  2024_POPL_ACC.py  ATVA2024.py  DAC2024_run_ACC.py  HSCC2023_run_ACASXu_full.py  HSCC2023_run_ACASXu_small.py  HSCC2023_run_RocketNet.py  HSCC2023_run_tinyNet.py  HSCC2024_run_RecurrentNN.py  HSCC2024_run_strict_individual_fair_exact.py  HSCC2025_ProbStarTL.py  HSCC2025_SparseImageStar.py  JOURNAL2025_run_RecurrentNN_tinyNet.py  LICENSE  NAHS2024_RNN.py  NAHS2024_run_ACASXu_full_Piecewise.py  NAHS2024_run_ACASXu_small_Piecewise.py  NAHS2024_run_HCAS_all_Piecewise.py  NAHS2024_run_tinyNet_Piecewise copy.py  NAHS2024_run_tinyNet_Piecewise.py  Neural Network Verification 2.ipynb  Neural Network Verification.ipynb  Probstar_test.py  Quantitative Neural Network Verification.ipynb  README.md  RUN_ACASXu_full_LeakyReLU.py  RUN_ACASXu_full_ReLU.py  RUN_ACASXu_full_SatLin.py  RUN_ACASXu_full_SatLins.py  RUN_ACASXu_small_LeakyReLU.py  RUN_ACASXu_small_ReLU.py  RUN_ACASXu_small_SatLin.py  RUN_ACASXu_small_SatLins.py  RUN_HCAS_all_LeakyReLU.py  RUN_HCAS_all_ReLU.py  RUN_HCAS_all_SatLin.py  RUN_HCAS_all_SatLin_alienware.py  RUN_HCAS_all_SatLins.py  RUN_HCAS_all_SatLins_alienware.py  (+50 more)
.devcontainer/: Dockerfile  build_docker.sh  devcontainer.json  docker-compose.yml  launch_docker.sh
.ipynb_checkpoints/: HSCC2024_DEMO-checkpoint.ipynb  HSCC2024_testing-checkpoint.ipynb  Neural Network Verification 2-checkpoint.ipynb  Quantitative Neural Network Verification-checkpoint.ipynb
SparseImageStar_evaluation/: memory_usage_oval21.py  memory_usage_vgg16.py  (+10 more)
(+829 files in other folders)
